--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@mui/x-charts": "^7.28.0",
+    "@mui/x-charts-pro": "^8.2.0",
     "@mui/x-data-grid": "^7.28.3",
     "@mui/x-data-grid-pro": "^7.28.3",
     "@mui/x-date-pickers": "^7.28.3",
